# amphi

./: .gitignore  Agents.md  CMakeLists.txt  README.md  TODO.md  pubspec.yaml
lib/: main.dart
lib/core/theme/: theme_provider.dart  themes.dart
lib/presentation/providers/: player_provider.dart  playlist_provider.dart  settings_provider.dart
lib/presentation/screens/: main_screen.dart  settings_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
qml/: main.qml
src/: main.cpp  mpvitem.cpp  mpvitem.h  playlistmodel.cpp  playlistmodel.h
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
